# bachelor_thesis

./: .gitignore  README.md
code/: .gitignore  OVERNIGHT_RESULTS.md  README.md  pyproject.toml
code/docs/: ADVISOR_BENCHMARKS.md  EXPERIMENTS.md  IMPLEMENTATION_PLAN.md  SUBMISSION_PLAN.md  V1_PUSH_PLAN.md  WORKLOG.md
code/notebooks/: 00_buckley_leverett.ipynb  01_logistic_ode.ipynb  02_burgers.ipynb  03_allen_cahn.ipynb  04_burgers_uniform_sampling.ipynb  05_weight_audit.ipynb  06_laplace_1d.ipynb  07_navier_stokes_2d.ipynb  08_laplace_1d_lc.ipynb  09_baseline_comparison.ipynb  experiments_overnight_v1_v8.ipynb
code/paper_icml/: CHANGES_FROM_NEURIPS.md  bibliobase.bib  main.tex  main_v0.tex
code/paper_neurips/: PAPER.md  README.md  main.tex  openreview_submission.md  refs.bib
code/pinns/: __init__.py  baseline.py  device.py  inference.py  lambda_sampler.py  model.py  pi_deeponet.py  training.py
code/scripts/: _followon_chain.sh  _overnight_chain.sh  ablation_k_eval.py  ablation_n_lambda.sh  bl_viscous_reruns.sh  burgers_fixed_lambda_baseline.py  causal_pinn_burgers.py  fno_burgers.py  harvest_film_lbfgs.py  lc_pinn_bl_seeds.py  lc_pinn_burgers_seeds.py  lc_pinn_helmholtz.py  lc_pinn_helmholtz_2d.py  lc_pinn_helmholtz_3d.py  lc_pinn_schrodinger.py  make_pareto_plot.py  make_per_alpha_plot.py  make_per_k_plot.py  overnight_t12_chain.sh  per_k_breakdown_helmholtz.py  pi_deeponet_helmholtz.py  pi_deeponet_schrodinger.py  post_run_integrate.sh  relobralo_bl.py  relobralo_burgers.py  relobralo_helmholtz.py  relobralo_helmholtz_2d.py  relobralo_helmholtz_3d.py  (+12 more)
(+310 files in other folders)
