[tool.poetry]
name = "pinns"
version = "0.1.0"
description = "Loss-conditional PINN — multi-equation benchmark suite"
authors = ["Anna Lazareva"]
readme = "README.md"
packages = [{ include = "pinns" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
numpy = "^1.26"
matplotlib = "^3.8"
tqdm = "^4.65"
scipy = "^1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
